--- a/pages/CSS/FormPopup.css
+++ b/pages/CSS/FormPopup.css
@@ -1,4 +1,4 @@
-body {font-family: Arial, Helvetica, sans-serif;}
+body {font-family: Arial;}
 * {box-sizing: border-box;}
 
 /* The popup form - hidden by default */
@@ -17,23 +17,24 @@ body {font-family: Arial, Helvetica, sans-serif;}
 /* Add styles to the form container */
 .form-container {
     padding: 10px;
-    background-color: #2c2f33;
+    background-color: #556dc6;
     color: white;
+    border-radius: 4px;
 }
 
 /* Full-width input fields */
-.form-container input[type=text], .form-container input[type=datetime-local] , .form-container input[type=datetime-local]{
+.form-container input[type=text], .form-container input[type=datetime-local] {
     width: 100%;
     padding: 15px;
     margin: 5px 0 22px 0;
     border: none;
-    background: #99aab5;
-    color: white;
+    background: white;
+    color: black;
 }
 
 /* Set a style for the submit/login button */
 .form-container .btn {
-    background-color: #99aab5;
+    background-color: #7289da;
     color: white;
     padding: 16px 20px;
     border: none;
