--- a/pages/CSS/RoundedButton.css
+++ b/pages/CSS/RoundedButton.css
@@ -1,12 +1,13 @@
 .button {
     background-color: #7289da; /* Green */
     border: none;
+    width: 200px;
+    max-width: 25%;
     color: white;
-    padding: 15px 32px;
+    padding: 10px 15px;
     text-align: center;
     text-decoration: none;
-    display: inline-block;
     font-size: 16px;
     border-radius: 4px;
-    margin-left: 50px;
+    margin: 10px;
 }
